--- a/GoLocal/package.json
+++ b/GoLocal/package.json
@@ -32,6 +32,7 @@
     "angularfire2": "^5.1.0",
     "cordova-plugin-firebase": "^2.0.5",
     "cordova-plugin-telerik-imagepicker": "^2.2.2",
+    "cordova-plugin-whitelist": "1.3.3",
     "cordova-sqlite-storage": "^2.5.2",
     "firebase": "^5.5.9",
     "ionic-angular": "3.9.2",
@@ -53,7 +54,8 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-telerik-imagepicker": {
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "Upload images"
-      }
+      },
+      "cordova-plugin-whitelist": {}
     }
   }
 }
