--- a/GoLocal/package.json
+++ b/GoLocal/package.json
@@ -38,6 +38,8 @@
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ng2-file-upload": "^1.3.0",
+    "node": "^10.15.3",
+    "node-sass": "^4.13.0",
     "rxjs": "^6.0.0",
     "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
